[package]
name = "btc"
version = "0.1.0"
edition = "2018"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "A CLI tool for getting the price of bitcoin in different currencies."
repository = "https://github.com/grantshandy/btc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
coindesk = "0.1.0"
async-std = { version = "1.9.0", features = ["attributes"] }
colored = "2.0.0"